--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       margin-bottom: 20px;
       background-color: #ffffff;
+      height: auto !important;
+      overflow: visible !important;
     }
     .card-header {
       background-color: #ffffff;
@@ -64,6 +66,12 @@
     /* Garante que todo o conteúdo do card seja exibido */
     .card-body {
       overflow: visible;
+      height: auto !important;
+    }
+    /* Garante que o container de resultados se ajuste conforme o conteúdo */
+    #resultContainer {
+      height: auto !important;
+      overflow: visible !important;
     }
   </style>
 </head>
