--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           conteudoAssociado += `<p><strong>RECEBE VPE:</strong> ${data.VPE["RECEBE VPE"]}</p>`;
         }
         if (data.VPE["INICIO"]) {
-          conteudoAssociado += `<p><strong>INÍCIO:</strong> ${data.VPE["INICIO"]}</p>`;
+          conteudoAssociado += `<p><strong>INÍCIO DE PENSÃO:</strong> ${data.VPE["INICIO"]}</p>`;
         }
         // Dados adicionais de AUXÍLIO MORADIA (se disponíveis)
         if (data["AUXÍLIO MORADIA"]) {
