--- a/index.html
+++ b/index.html
@@ -274,50 +274,66 @@
           (data.VPE && data.VPE.DOCUMENTAÇÃO && data.VPE.DOCUMENTAÇÃO.toUpperCase() !== "COMPLETA")) {
         pendente = true;
       }
-      if (pendente) {
-        let pendenteContent = `
-          <div style="text-align: center; margin-bottom: 10px;">
-            <strong>📢 Atenção! Envio de Documentos Pendentes</strong>
-          </div>
-          <div style="text-align: left; margin-bottom: 10px;">
-            Encaminhe os documentos pendentes escaneados para: <br>
-            <strong>📧 documentos@apipmcbdf.com.br</strong> (envio exclusivo)
-          </div>
-          <div style="text-align: left; margin-bottom: 10px;">
-            Assunto: <strong>Documentação Pendente</strong>
-          </div>
-          <div style="text-align: left; margin-bottom: 10px;">
-            <strong>⚠️ Importante:</strong>
-          </div>
-          <div style="text-align: left; margin-bottom: 10px;">
-            Certifique-se da alta qualidade dos scans para legibilidade.<br>
-            O envio dos originais também é obrigatório, via:
-          </div>
-          <div style="text-align: left; margin-bottom: 10px;">
-            <strong>📮 Correio:</strong> <br>
-            Rua Evaristo da Veiga, 55, 10º andar<br>
-            CEP: 20031-040
-          </div>
-          <div style="text-align: left; margin-bottom: 10px;">
-            <strong>🙋 Pessoalmente:</strong> <br>
-            No mesmo endereço, no horário: 09h às 13h
-          </div>
-          <div style="text-align: left; margin-bottom: 10px;">
-            Dúvidas? Contate-nos:
-          </div>
-          <div style="text-align: left; margin-bottom: 10px;">
-            <strong>📞 Telefones:</strong> (21) 2532-6974 / 2220-6154 / 2544-2607<br>
-            <strong>💬 WhatsApp:</strong> (21) 98499-7413
-          </div>
-          <div style="text-align: left; margin-bottom: 10px;">
-            <strong>📧 E-mail:</strong> atendimento@apipmcbdf.com.br
-          </div>
-          <div style="text-align: center;">
-            Agradecemos sua atenção!
-          </div>
-        `;
-        html += createCard("", pendenteContent, "center", "left");
-      }
+if (pendente) {
+  let pendenteContent = `
+    <div style="text-align: center; margin-bottom: 10px;">
+      <strong>📢 Atenção! Envio de Documentos Pendentes</strong>
+    </div>
+    <div style="text-align: left; margin-bottom: 10px;">
+      Para dar continuidade ao seu processo, encaminhe os documentos pendentes conforme as instruções abaixo:
+    </div>
+    
+    <div style="text-align: left; margin-bottom: 10px;">
+      <strong>📧 Documentos que podem ser enviados por e-mail:</strong> <br>
+      Enviar para: <strong>documentos@apipmcbdf.com.br</strong><br>
+      Assunto: <strong>Documentação Pendente</strong><br>
+      Documentos aceitos por e-mail (não há necessidade de envio do original):<br>
+      ✅ Contracheque<br>
+      ✅ Ficha Financeira (preferencialmente por e-mail, para processamento prioritário)<br>
+      ✅ Comprovante de residência<br>
+      ✅ Documento de identidade (RG ou CNH)<br>
+      <strong>⚠️ Importante:</strong> Certifique-se de que os arquivos estejam legíveis e de alta qualidade.
+    </div>
+
+    <div style="text-align: left; margin-bottom: 10px;">
+      <strong>📮 Documentos que devem ser entregues pessoalmente ou por correio:</strong><br>
+      Os documentos abaixo devem ser entregues fisicamente, pois exigem conferência do original:<br>
+      🔹 Contrato<br>
+      🔹 Procuração<br>
+      🔹 Declaração de Inexistência de Ação<br>
+    </div>
+
+    <div style="text-align: left; margin-bottom: 10px;">
+      <strong>📍 Opções para envio físico:</strong><br>
+      <strong>Via correio:</strong> <br>
+      Rua Evaristo da Veiga, 55, 10º andar<br>
+      CEP: 20031-040<br><br>
+      <strong>Pessoalmente:</strong> <br>
+      No mesmo endereço, das 09h às 13h.
+    </div>
+
+    <div style="text-align: left; margin-bottom: 10px;">
+      <strong>🔹 Prioridade no processamento da Ficha Financeira:</strong><br>
+      Para maior agilidade no trâmite, recomendamos que a <strong>Ficha Financeira</strong> seja enviada preferencialmente por e-mail. Documentos enviados por e-mail serão processados com prioridade, pois já estarão prontos para encaminhamento ao escritório Silveira e Cruz. Já os documentos entregues fisicamente passarão por uma etapa adicional de digitalização antes do envio.
+    </div>
+
+    <div style="text-align: left; margin-bottom: 10px;">
+      <strong>❓ Dúvidas? Entre em contato:</strong>
+    </div>
+    
+    <div style="text-align: left; margin-bottom: 10px;">
+      <strong>📞 Telefones:</strong> (21) 2532-6974 / 2220-6154 / 2544-2607<br>
+      <strong>💬 WhatsApp:</strong> (21) 98499-7413<br>
+      <strong>📧 E-mail:</strong> atendimento@apipmcbdf.com.br
+    </div>
+
+    <div style="text-align: center;">
+      Agradecemos sua atenção!
+    </div>
+  `;
+  html += createCard("", pendenteContent, "center", "left");
+}
+
 
       resultContainer.innerHTML = html;
     }
