--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
         if (vpe.DOCUMENTAÇÃO && vpe.DOCUMENTAÇÃO.toUpperCase().includes("FICHA FINANCEIRA")) {
           contentVPE += `<p><strong style="color:blue;">A ficha financeira pendente se refere exclusivamente à sua parte, não ao instituidor nem à pensionista anterior, se houver. O período tem início em 2008; entretanto, caso sua pensão tenha começado após essa data, o início será a data de início da sua pensão. A data final é 2025.</strong></p>`;
           contentVPE += `<p><a href="https://drive.google.com/file/d/1DhryUJl8EVZp3j2ZwvYoeU2jiw53WrqN/view?usp=sharing" target="_blank">PASSO A PASSO FICHA FINANCEIRA (CLIQUE AQUI)</a></p>`;
+          contentVPE += `<p><a href="https://drive.google.com/file/d/1DmZAW0Qjs2t7VvJROsn4Glrkq9oePIEQ/view?usp=sharing" target="_blank">MAIS ORIENTAÇÕES SOBRE A FICHA FINANCEIRA (CLIQUE AQUI)</a></p>`
         }
         html += createCard("VPE", contentVPE, "center", "left");
       }
