--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         }
         // Se DOCUMENTAÇÃO contiver "FICHA FINANCEIRA", adiciona as informações específicas e o link
         if (vpe.DOCUMENTAÇÃO && vpe.DOCUMENTAÇÃO.toUpperCase().includes("FICHA FINANCEIRA")) {
-          contentVPE += `<p><strong style="color:black;">A ficha financeira é essencial para a execução de valores atrasados, abrangendo diferentes períodos conforme a data de início da pensão. Para pensões iniciadas até outubro de 2008, deve cobrir de 2008 até a implantação da VPE. Para as iniciadas após essa data, deve contemplar da concessão até 2025 ou a implantação da VPE. No caso de falecidos, a solicitação deve ser feita ao DECIPEX, abrangendo de 2008 até a data do óbito.</strong></p>`;
+          contentVPE += `<p><strong style="color:black;">Para pensões iniciadas até outubro de 2008, deve cobrir de 2008 até a implantação da VPE. Para as iniciadas após essa data, deve contemplar da concessão até 2025 ou a implantação da VPE.</strong></p>`;
           contentVPE += `<p><a href="https://drive.google.com/file/d/1DhryUJl8EVZp3j2ZwvYoeU2jiw53WrqN/view?usp=sharing" target="_blank">PASSO A PASSO FICHA FINANCEIRA (CLIQUE AQUI)</a></p>`;
           contentVPE += `<p><a href="https://drive.google.com/file/d/1DmZAW0Qjs2t7VvJROsn4Glrkq9oePIEQ/view?usp=sharing" target="_blank">MAIS ORIENTAÇÕES SOBRE A FICHA FINANCEIRA (CLIQUE AQUI)</a></p>`
         }
