--- a/index.html
+++ b/index.html
@@ -284,25 +284,25 @@ if (pendente) {
       Para dar continuidade ao seu processo, encaminhe os documentos pendentes conforme as instruções abaixo:
     </div>
     
-    <div style="text-align: left; margin-bottom: 10px;">
-      <strong>📧 Documentos que podem ser enviados por e-mail:</strong> <br>
-      Enviar para: <strong>documentos@apipmcbdf.com.br</strong><br>
-      Assunto: <strong>Documentação Pendente</strong><br>
-      Documentos aceitos por e-mail (não há necessidade de envio do original):<br>
-      ✅ Contracheque<br>
-      ✅ Ficha Financeira (preferencialmente por e-mail, para processamento prioritário)<br>
-      ✅ Comprovante de residência<br>
-      ✅ Documento de identidade (RG ou CNH)<br>
-      <strong>⚠️ Importante:</strong> Certifique-se de que os arquivos estejam legíveis e de alta qualidade.
-    </div>
+<div style="text-align: left; margin-bottom: 30px;">
+  <strong>📧 Documentos que podem ser enviados por e-mail:</strong> <br>
+  Enviar para: <strong>documentos@apipmcbdf.com.br</strong><br>
+  Assunto: <strong>Documentação Pendente</strong><br>
+  Documentos aceitos por e-mail (não há necessidade de envio do original):<br>
+  ✅ Contracheque<br>
+  ✅ Ficha Financeira (preferencialmente por e-mail, para processamento prioritário)<br>
+  ✅ Comprovante de residência<br>
+  ✅ Documento de identidade (RG ou CNH)<br>
+  <strong>⚠️ Importante:</strong> Certifique-se de que os arquivos estejam legíveis e de alta qualidade.
+</div>
 
-    <div style="text-align: left; margin-bottom: 10px;">
-      <strong>📮 Documentos que devem ser entregues pessoalmente ou por correio:</strong><br>
-      Os documentos abaixo devem ser entregues fisicamente, pois exigem conferência do original:<br>
-      🔹 Contrato<br>
-      🔹 Procuração<br>
-      🔹 Declaração de Inexistência de Ação<br>
-    </div>
+<div style="text-align: left; margin-top: 20px; margin-bottom: 10px;">
+  <strong>📮 Documentos que devem ser entregues pessoalmente ou por correio:</strong><br>
+  Os documentos abaixo devem ser entregues fisicamente, pois exigem conferência do original:<br>
+  🔹 Contrato<br>
+  🔹 Procuração<br>
+  🔹 Declaração de Inexistência de Ação<br>
+</div>
 
     <div style="text-align: left; margin-bottom: 10px;">
       <strong>📍 Opções para envio físico:</strong><br>
