--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ if (pendente) {
       <strong>📍 Opções para envio físico:</strong><br>
       <strong>Via correio:</strong> <br>
       Rua Evaristo da Veiga, 55, 10º andar<br>
-      CEP: 20031-040<br><br>
+      CEP: 20031-040<br>
       <strong>Pessoalmente:</strong> <br>
       No mesmo endereço, das 09h às 13h.
     </div>
